fix misalignments in IE (caused by margin:auto in a flexbox)

--- a/src/js/common/efg.componentDirective/efg.componentDirective.less
+++ b/src/js/common/efg.componentDirective/efg.componentDirective.less
@@ -13,9 +13,11 @@
 
 .component-flex {
 	display: flex;
+	justify-content: center;
+	align-items: center;
 
 	> * {
-		margin: auto;
+		margin: 0;
 	}
 }
 
