--- a/src/js/common/efg.headerbarDirective/efg.headerbarDirective.less
+++ b/src/js/common/efg.headerbarDirective/efg.headerbarDirective.less
@@ -86,7 +86,8 @@ body {
 }
 
 .headerbar-item {
-    margin: auto .5 * @u-unit;
+    margin: 0 .5 * @u-unit;
+    align-self: center;
     list-style-type: none;
 }
 
